@@ -198,6 +198,51 @@ describe specl:
   - it outputs results from a formatter specified on the command line:
       expect (run_spec {"--formatter=tap"; stdin = yaml}).to_contain_output "1..1"
 
+  - context when failing fast:
+    - before: |
+        function specl (args)
+          return run_spec {
+            "-freport", "-v", args,
+            stdin = "specify specl:\n" ..
+                    "- it passes:\n" ..
+                    "    expect (1).to_be (1)\n" ..
+                    "- it hasn't decided yet:\n" ..
+                    "    pending ()\n" ..
+                    "    expect (1).to_be (0)\n" ..
+                    "- it fails:\n" ..
+                    "    expect (1).to_be (0)\n" ..
+                    "- it doesn't get this far:\n" ..
+                    "    expect (1).to_be (1)\n" ..
+                    "- it stil hasn't decided:\n" ..
+                    "- it fails again:\n" ..
+                    "    expect (1).to_be (0)\n"
+           }
+         end
+    - it checks earlier passing examples:
+        expect (specl "--fail-fast").to_contain_output "\n1 passed,"
+        expect (specl "-1").to_contain_output "\n1 passed,"
+    - it checks earlier pending examples:
+        expect (specl "--fail-fast").to_contain_output " hasn't decided yet"
+        expect (specl "-1").to_contain_output " hasn't decided yet"
+    - it stops at the first failing example:
+        expect (specl "--fail-fast").to_contain_output " 1 failed "
+        expect (specl "-1").to_contain_output " 1 failed "
+    - it does not check later passing examples:
+        expect (specl "--fail-fast").
+          not_to_contain_output "doesn't get this far"
+        expect (specl "-1").
+          not_to_contain_output "doesn't get this far"
+    - it does not check later pending examples:
+        expect (specl "--fail-fast").
+          not_to_contain_output "still hasn't decided"
+        expect (specl "-1").
+          not_to_contain_output "still hasn't decided"
+    - it does not check later failing examples:
+        expect (specl "--fail-fast").
+          not_to_contain_output "fails again"
+        expect (specl "-1").
+          not_to_contain_output "fails again"
+
   - context when using a custom formatter:
     - before: |
         -- Write a very basic custom formatter to a temporary file, and add
