@@ -12,6 +12,8 @@ Specl NEWS - User visible changes.
   - Specl no longer crashes when requiring system libraries (such as
     math, bit32 etc) from examples or spec_helpers.
 
+  - The `--fail-fast` option no longer stops when encountering a failing
+    expectation in a pending example.
 
 * Noteworthy changes in release 11 (2014-04-05) [stable]
 
